--- a/figma.html
+++ b/figma.html
@@ -9,14 +9,14 @@
   <body>
     <!-- header section -->
     <header>
-      <div class="header">
-        <h1 class="head">BISTRO</h1>
+      <div class="bolu-header">
+        <h1 class="bolu-head">BISTRO</h1>
         <!-- nav section -->
-        <nav class="nav1">
+        <nav class="bolu-nav1">
           <ul>
             <li>Home</li>
-            <li class="dropdown">
-              <select id="desired-course">
+            <li class=" bolu-dropdown">
+              <select id="bolu-desired-course">
                 <option>Shop</option>
                 <option>Drugs</option>
                 <option>Beverages</option>
@@ -29,56 +29,56 @@
             <li>Pages</li>
           </ul>
         </nav>
-        <nav class="nav2">
+        <nav class="bolu-nav2">
           <ul>
-            <li><img src="assets/images/humanicon.png" /> Register / Login</li>
-            <li><img src="/assets/images/li.png" /></li>
-            <li><img src="/assets/images/cart.png" /></li>
-            <li><img src="/assets/images/likes.png" /></li>
+            <li><img src="assets/images/images/humanicon.png" /> Register / Login</li>
+            <li><img src="assets/images/images/li.png" /></li>
+            <li><img src="assets/images/images/cart.png" /></li>
+            <li><img src="assets/images/images/likes.png" /></li>
           </ul>
         </nav>
       </div>
     </header>
     <!-- Hero Section-->
-    <section class="hero">
-      <div class="hero-content">
+    <section class="bolu-hero">
+      <div class="bolu-hero-content">
         <h1>GROCERIES DELIVERY</h1>
         <h4>
           We know how large objects will act, but things on a small scale just
           do not act that way.
         </h4>
-        <button class="hero-btn">Start Now</button>
+        <button class="bolu-hero-btn">Start Now</button>
       </div>
-      <div class="slider-indicator"></div>
+      <div class="bolu-slider-indicator"></div>
     </section>
     <!-- list section -->
-    <section class="bigcontainer">
-      <div class="container">
-        <div class="cards-0">
-          <h6 class="text">Your Space</h6>
-          <h2 class="title">Unique Life</h2>
-          <h6 class="bottom-text">Explore Items</h6>
+    <section class="bolu-bigcontainer">
+      <div class="bolu-container">
+        <div class="bolu-cards-0">
+          <h6 class="bolu-text">Your Space</h6>
+          <h2 class="bolu-title">Unique Life</h2>
+          <h6 class="bolu-bottom-text">Explore Items</h6>
         </div>
-        <div class="cards-1">
-          <h6 class="text">Ends Today</h6>
-          <h2 class="title">Elements Style</h2>
-          <h6 class="bottom-text">Explore Items</h6>
+        <div class="bolu-cards-1">
+          <h6 class="bolu-text">Ends Today</h6>
+          <h2 class="bolu-title">Elements Style</h2>
+          <h6 class="bolu-bottom-text">Explore Items</h6>
         </div>
-        <div class="cards-2">
-          <h6 class="text">Your Space</h6>
-          <h2 class="title">Elements Style</h2>
-          <h6 class="bottom-text">Explore Items</h6>
+        <div class="bolu-cards-2">
+          <h6 class="bolu-text">Your Space</h6>
+          <h2 class="bolu-title">Elements Style</h2>
+          <h6 class="bolu-bottom-text">Explore Items</h6>
         </div>
       </div>
     </section>
     <!-- LOGO SECTION -->
-    <section class="brand">
-      <img src="./assets/images/fa-brands-1.png" alt="LOGO" />
-      <img src="./assets/images/fa-brands-2.png " alt="LOGO" />
-      <img src="./assets/images/fa-brands-3.png" alt="LOGO" />
-      <img src="./assets/images/fa-brands-4.png" alt="LOGO" />
-      <img src="./assets/images/fa-brands-5.png" alt="LOGO" />
-      <img src="./assets/images/col-md-2.png" alt="LOGO" />
+    <section class="bolu-brand">
+      <img src="assets/images/images/fa-brands-1.png" alt="LOGO" />
+      <img src="assets/images/images/fa-brands-2.png" alt="LOGO" />
+      <img src="assets/images/images/fa-brands-3.png" alt="LOGO" />
+      <img src="assets/images/images/fa-brands-4.png" alt="LOGO" />
+      <img src="assets/images/images/fa-brands-5.png" alt="LOGO" />
+      <img src="assets/images/images/col-md-2.png" alt="LOGO" />
     </section>
 
     <!-- practice advice section -->
@@ -87,71 +87,71 @@
                 <h1>Featured Posts</h1>
                </header> -->
     <!--CARD ROW -->
-    <section class="grid-cards">
+    <section class="bolu-grid-cards">
       <!-- FIRST CARD -->
-      <article class="cards">
-        <div class="picture-a">
-          <span class="bd">NEW</span>
+      <article class="bolu-cards">
+        <div class="bolu-picture-a">
+          <span class="bolu-bd">NEW</span>
           <!-- <img src="./assets/images/jogodo.webp"alt=""> -->
         </div>
-        <div class="text-area">
-          <p class="pus"><span class="col">Google </span>Trending New</p>
-          <h2 class="lang">Loudest a la Madison #1<br />(Integral)</h2>
-          <p class="details">
+        <div class="bolu-text-area">
+          <p class="bolu-pus"><span class="col">Google </span>Trending New</p>
+          <h2 class="bolu-lang">Loudest a la Madison #1<br />(Integral)</h2>
+          <p class="bolu-details">
             We focus on ergonomics and meeting you where you work. It's only a
             keystone away.
           </p>
-          <div class="info">
+          <div class="bolu-info">
             <span>22 April 2021</span>
             <span>10 comments</span>
           </div>
-          <a class="link" href="#"
+          <a class="bolu-link" href="#"
             >Learn More <span class="arrow">&rsaquo;</span></a
           >
         </div>
       </article>
 
       <!-- SECOND CARD -->
-      <article class="cards">
-        <div class="picture-b">
-          <span class="bd">NEW</span>
+      <article class="bolu-cards">
+        <div class="bolu-picture-b">
+          <span class="bolu-bd">NEW</span>
           <!-- <img src=""alt=""> -->
         </div>
-        <div class="text-area">
-          <p class="pus"><span class="col">Google </span>Trending New</p>
-          <h2 class="lang">Loudest a la Madison #1<br />(Integral)</h2>
-          <p class="details">
+        <div class="bolu-text-area">
+          <p class="bolu-pus"><span class="col">Google </span>Trending New</p>
+          <h2 class="bolu-lang">Loudest a la Madison #1<br />(Integral)</h2>
+          <p class="bolu-details">
             We focus on ergonomics and meeting you where you work. It's only a
             keystone away.
           </p>
-          <div class="info">
+          <div class="bolu-info">
             <span>22 April 2021</span>
             <span>10 comments</span>
           </div>
-          <a class="link" href="#"
+          <a class="bolu-link" href="#"
             >Learn More <span class="arrow">&rsaquo;</span></a
           >
         </div>
       </article>
 
       <!-- THIRD CARD -->
-      <article class="cards">
-        <div class="picture-c">
-          <span class="bd">NEW</span>
+      <article class="bolu-cards">
+        <div class="bolu-picture-c">
+          <span class="bolu-bd">NEW</span>
           <!-- <img src=""alt=""> -->
         </div>
-        <div class="text-area">
-          <p class="pus"><span class="col">Google </span>Trending New</p>
-          <h2 class="lang">Loudest a la Madison #1<br />(Integral)</h2>
-          <p class="details">
+        <div class="bolu-text-area">
+          <p class="bolu-pus"><span class="col">Google </span>Trending New</p>
+          <h2 class="bolu-lang">Loudest a la Madison #1<br />(Integral)</h2>
+          <p class="bolu-details">
             We focus on ergonomics and meeting you where you work. It's only a
             keystone away.
           </p>
-          <div class="info">
+          <div class="bolu-info">
             <span> April 2021</span>
             <span>10 comments</span>
           </div>
-          <a class="link" href="#"
+          <a class="bolu-link" href="#"
             >Learn More <span class="arrow">&rsaquo;</span></a
           >
         </div>
