--- a/figma.html
+++ b/figma.html
@@ -31,10 +31,10 @@
         </nav>
         <nav class="bolu-nav2">
           <ul>
-            <li><img src="assets/images/images/humanicon.png" /> Register / Login</li>
-            <li><img src="assets/images/images/li.png" /></li>
-            <li><img src="assets/images/images/cart.png" /></li>
-            <li><img src="assets/images/images/likes.png" /></li>
+            <li><img src="assets/images/humanicon.png" /> Register / Login</li>
+            <li><img src="assets/images/li.png" /></li>
+            <li><img src="assets/images/cart.png" /></li>
+            <li><img src="assets/images/likes.png" /></li>
           </ul>
         </nav>
       </div>
@@ -73,19 +73,20 @@
     </section>
     <!-- LOGO SECTION -->
     <section class="bolu-brand">
-      <img src="assets/images/images/fa-brands-1.png" alt="LOGO" />
-      <img src="assets/images/images/fa-brands-2.png" alt="LOGO" />
-      <img src="assets/images/images/fa-brands-3.png" alt="LOGO" />
-      <img src="assets/images/images/fa-brands-4.png" alt="LOGO" />
-      <img src="assets/images/images/fa-brands-5.png" alt="LOGO" />
-      <img src="assets/images/images/col-md-2.png" alt="LOGO" />
+      <img src="assets/images/fa-brands-1.png" alt="LOGO" />
+      <img src="assets/images/fa-brands-2.png" alt="LOGO" />
+      <img src="assets/images/fa-brands-3.png" alt="LOGO" />
+      <img src="assets/images/fa-brands-4.png" alt="LOGO" />
+      <img src="assets/images/fa-brands-5.png" alt="LOGO" />
+      <img src="assets/images/col-md-2.png" alt="LOGO" />
     </section>
 
-    <!-- practice advice section -->
-    <!-- <header class="title">
-                <p>Practice Advice</p>
-                <h1>Featured Posts</h1>
-               </header> -->
+                       <!-- practice advice section -->
+        <div class="bolu-div">
+        <h6>Practice Advice</h6>
+        <h3>Featured Posts</h3>
+
+        </div>
     <!--CARD ROW -->
     <section class="bolu-grid-cards">
       <!-- FIRST CARD -->
